typesafe_builder_derive/tests/ui/8.stderr
error[E0599]: no method named `build` found for struct `ConfigBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty>` in the current scope
  --> tests/ui/8.rs:16:39
   |
7  |     #[derive(Builder)]
   |              ------- method `build` not found for this struct
...
16 |     let config = ConfigBuilder::new().build();
   |                                       ^^^^^ method not found in `ConfigBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderEmpty>`
   |
   = note: the method was found for
           - `ConfigBuilder<_TypesafeBuilderEmpty, _TypesafeBuilderFilled>`
           - `ConfigBuilder<_TypesafeBuilderFilled, _TypesafeBuilderEmpty>`
           - `ConfigBuilder<_TypesafeBuilderFilled, _TypesafeBuilderFilled>`
